--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "build-prod": "ng build --prod --base-href '/PIUG' --output-path docs"
+    "build-prod": "ng build --prod --base-href /PIUG --output-path docs"
   },
   "private": true,
   "dependencies": {
