Fix logo part 2

--- a/angular.json
+++ b/angular.json
@@ -25,12 +25,7 @@
             "aot": false,
             "assets": [
               "src/favicon.ico",
-              "src/assets",
-              {
-                "glob": "logo.png",
-                "input": "src/assets",
-                "output": "/assets/"
-              }
+              "src/assets"
             ],
             "styles": [
               "src/styles.scss"
